--- a/Web.config
+++ b/Web.config
@@ -6,7 +6,7 @@
 	<defaultDocument>
 		<files>
 			<clear />               
-			<add value="Home.html"/>
+			<add value="Index.html"/>
 		</files>
 	</defaultDocument>
   </system.webServer>
